--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resources/style.css">
 </head>
 <body>
 <main>
   <pre id="source-code"></pre>
 </main>
-<script type="module" src="index.js"></script>
+<script type="module" src="src/index.js"></script>
 </body>
 </html>
